--- a/public/index.html
+++ b/public/index.html
@@ -48,4 +48,19 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 	</body>
+
+	<!-- Google tag (gtag.js) -->
+	<script
+		async
+		src="https://www.googletagmanager.com/gtag/js?id=G-G1FS5GD14F"
+	></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag("js", new Date());
+
+		gtag("config", "G-G1FS5GD14F");
+	</script>
 </html>
